[package]
name = "r-unzip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "r-unzip"
path = "src/main.rs"

[dependencies]
zip = "^0.6"
chrono = "^0.4"
regex = "^1.8"
toml = "^0.5"
serde = "^1.0"
serde_derive = "^1.0"
getopts = "^0.2"
